2012-05-07  Alan Modra  <amodra@gmail.com>

	* Makefile.am (check-DEJAGNU): Clear LC_COLLATE, LC_ALL and LANG.
	* Makefile.in: Regenerate.

2012-05-05  Alan Modra  <amodra@gmail.com>

	* dlltool.c (make_one_lib_file): Use bfd_und_section_ptr.

2012-05-03  Sean Keys  <skeys@ipdatasys.com>

	* readelf.c: Add support for XGATE.

2012-05-02  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.
	* po/it.po: New Italian translation.
	* configure.in (ALL_LINGUAS): Add it.
	* configure: Regenerate.

2012-05-01  Nick Clifton  <nickc@redhat.com>

	PR binutils/13121
	* rescoff.c: Rename 'finfo' to 'flaginfo' to avoid conflicts with
	AIX system headers.

2012-04-25  Cary Coutant  <ccoutant@google.com>

	* doc/binutils.texi: Add -D/--enable-deterministic-archives option
	to strip and objcopy.
	* objcopy.c (deterministic): New global variable.
	(strip_options): Add --enable-deterministic-archives.
	(copy_options): Likewise.
	(copy_usage): Likewise.
	(strip_usage): Likewise.
	(copy_archive): When stripping all, don't add archive map; set
	deterministic output when requested.
	(strip_main): Add -D/--enable-deterministic-archives option.
	(copy_main): Likewise.

2012-04-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/13947
	* objcopy.c (copy_object): Call copy_relocations_in_section
	before copy_section.
	(skip_section): New.
	(copy_relocations_in_section): Likewise.
	(copy_section): Use skip_section.  Don't copy relocations here.

2012-04-11  Ryan Mansfield  <rmansfield@qnx.com>

        * objdump.c (dump_bfd): If defaulting to dwarf call
        dwarf_select_sections_all to enable displays.

2012-04-06  Roland McGrath  <mcgrathr@google.com>

	* configure.in (AC_CHECK_HEADERS): Add locale.h.
	* config.in: Regenerate.
	* configure: Regenerate.

2012-04-05  Nick Clifton  <nickc@redhat.com>

	* configure.in (AC_CHECK_FUNCS): Add setlocale.
	(AM_LC_MESSAGES): Add.
	* aclocal.m4: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.
